Fix overlapping of table headers over table content
By following the example provided, and placing the table header and table content in two separate div containers, the effect
of overflow while having a transparent table is achieved. It also does not require the table head to have a z index of 1.
Anything passing under the table head, will be obfuscated by the head itself. This fix, however, breaks several things in the
JS code. These include:

Bug: Remove button does not properly work|does not remove the 0th element and when romoving 1st element deletes 0th element.
Bug: Sorting is completely broken. Further, the code implementation for sorting is terrible for larger lists of elements
Bug: Changing read to unread, then deleting the element causes multiple instances of the read checkboxes to become unread/read

The first two bugs are likely due to the rearrangment of elements in the HTML. The second bug is likely a similar case, but also
is poorly optimized. Suggest fixing the second bug, by simply sorting the list directly, then drawing the table back onto screen.

--- a/styles.css
+++ b/styles.css
@@ -103,30 +103,28 @@ dialog::backdrop{
 
 /* dialog, form, and table styling */
 
-table {
-    display: block;
-    overflow: auto;
-    height: 100vh;
+table{
     width: 100%;
+    table-layout: fixed;
     font-family: var(--conent-font);
 }
-.table{
-    margin-top: 0px;
-    overflow-x: auto;
-    border: 1px solid rgba(255,255,255,0.3);
-}
-.head {
-    width: 25%;
-    position: sticky;
-    top: 0;
+.tbl-header{
     vertical-align: bottom;
     background-color: rgba(255,255,255, 0.3);
-    z-index: 1;
 }
+.tbl-content{
+    margin-top: 0px;
+    position: relative;
+    overflow-x: auto;
+    height: 100vh;
+    border: 1px solid rgba(255,255,255,0.3);
+}
+
 th,td{
-    color:#FFF;
+    color:#ffffff;
 }
 td{
+    padding:10px;
     text-align: center;
     margin: auto;
     text-overflow: ellipsis;
@@ -190,4 +188,18 @@ input:checked[type="checkbox"]::before{
     position: sticky;
     top: 10px;
     padding: 10px;
+}
+
+
+
+::-webkit-scrollbar{
+    width:10px;
+}
+
+::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
 }
